<resources>
    <string name="app_name">X-CameraDemo</string>
    <string name="action_settings">Settings</string>
    <string name="generateCrash">产生崩溃</string>
    <string name="title_activity_send_crash">发送错误日志</string>
    <string name="send_crash">发送崩溃信息</string>

    <string name="record_start">录像</string>
    <string name="record_stop">停止</string>

    <string name="btn_cam_resolution">尺寸</string>
    <string name="btn_output_type">输出</string>
    <string name="btn_view_clip">浏览</string>
    <string name="btn_all_settings">设置</string>
    <string name="btn_quick_test">测试</string>
    <string name="btn_quick_view">观看</string>
    <string name="btn_view_picture">照片</string>
    <string name="button_play_song">点歌</string>
    <string name="button_song_settings">音效</string>

    <string name="action_add">添加</string>
    <string name="action_delete">删除</string>
    <string name="action_view_image">浏览图片</string>
    <string name="action_delete_all">全部删除</string>
    <string name="action_view_clip">浏览</string>
    <string name="action_option">选项</string>
    <string name="action_cam_resolution">分辨率尺寸</string>
    <string name="action_output_type">输出类型</string>
    <string name="action_enable_audio">编码音频</string>
    <string name="action_enable_face_detection">人脸识别</string>
    <string name="action_enable_color_picker">取色</string>
    <string name="action_encode_settings">编码设置</string>
    <string name="action_encoder_framerate">帧率</string>
    <string name="action_encoder_bps">编码码率</string>
    <string name="action_send_log">发送日志</string>
    <string name="action_get_inke_url">生成映客直播串</string>
    <string name="action_get_share_qq_inke_url">生成映客直播串并分享至QQ</string>
    <string name="action_get_share_wx_inke_url">生成映客直播串并分享至微信</string>
    <string name="action_get_generate_qrcode_inke_url">生成映客直播串并生成二维码</string>
    <string name="action_copy_url">复制播放地址</string>
    <string name="action_generate_qrcode">生成直播地址二维码</string>
    <string name="action_upgrade_app">升级软件</string>
    <string name="action_login">登陆</string>
    <string name="action_locate">定位</string>
    <string name="action_resource_viewer">资源查看器</string>
    <string name="action_pic_viewer">图片浏览器</string>
    <string name="action_scan">扫码</string>
    <string name="action_download_arcsoft_dat">下载Arcsoft数据</string>
    <string name="action_download_faceunity_dat">下载FaceUnity数据</string>
    <string name="action_share">分享</string>

    <string name="cb_texture_encode">纹理编码</string>
    <string name="cb_x264_encode">x264编码</string>
    <string name="cb_fdk_aac_encode">fdk-aac编码</string>
    <string name="cb_x264_rotate">旋转</string>
    <string name="btn_explaination_url">说明</string>
    <string name="crash_description_hint">请输入crash的详细信息，以便分析。例如： 播放过程中切换播放器crash</string>
    <string name="room_id">房间号</string>
    <string name="save_jpeg">JPEG</string>

    <string name="error_msg_common">通用错误</string>
    <string name="error_msg_fail_to_publish">推送失败</string>
    <string name="error_msg_crash_when_publish">推送过程中崩溃</string>
    <string name="error_msg_fail_to_switch_camera">摄像头切换崩溃</string>

    <string name="live_rtmp">rtmp://106.75.53.85:2935/live/stream</string>
    <string name="hls_rtmp">rtmp://106.75.53.85:2935/hls/stream</string>
    <string name="rec_rtmp">rtmp://106.75.53.85:2935/rec/stream</string>
    <string name="able_rtmp">rtmp://live3.zhihuishu.com/livepkgr/rb_101111_4_500</string>
    <string name="pptv_rtmp">rtmp://60.55.12.180:1935/live/16156d9087f941bd818dc8390b7bf522</string>
    <string name="livevip_rtmp">rtmp://dllivepublisher.livevip.com.cn/livevip/800443</string>
    <string name="local_live_rtmp">rtmp://192.168.1.130:1935/live/stream</string>
    <string name="livevip_rtmp_play">rtmp://dlrtmpplayer.livevip.com.cn/livevip/800443</string>
    <string name="livevip_rtmp_play2">rtmp://liveplayer.livevip.com.cn/live/100518</string>
    <string name="live_udp">udp://192.168.1.191:6666?pkt_size=1316</string>
    <string name="live_rtsp">rtsp://192.168.1.130:8554/test.sdp</string>

    <string name="encode_dislay">编码码率 %d kbps</string>

    <string name="pref_url_openrtc">http://106.75.53.85:8123</string>
    <string name="pref_url_skyrtc">http://apprtc.diveinedu.com</string>
    <string name="menu_settings">Settings</string>
    <string name="ip">IP :</string>
    <string name="port">Port :</string>
    <string name="name">Name :</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="mediaSettings">mediaSettings</string>
    <string name="ipSettings">ipSettings</string>
    <string name="status">status</string>

    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="password">PWD</string>
    <string name="desname">Des Name</string>
    <string name="scale">scale</string>
    <string name="call">Call</string>
    <string name="switch_camera">Switch</string>

    <string-array name="output_type_array">
        <item>"mpegts"</item>
        <item>"mp4"</item>
        <item>"flv"</item>
        <item>"h264"</item>
        <item>"rtmp(livevip)"</item>
        <item>"rtmp(live)"</item>
        <item>"rtmp(hls)"</item>
        <item>"rtmp(rec)"</item>
        <item>"rtmp(inke)"</item>
        <item>"rtmp(able)"</item>
        <item>"udp"</item>
        <item>"rtsp"</item>
        <item>"自定义"</item>
    </string-array>

    <string-array name="play_url_array">
        <item>"rtmp(livevip)"</item>
        <item>"rtmp(live)"</item>
        <item>"rtmp(hls)"</item>
        <item>"rtmp(rec)"</item>
        <item>"rtmp(local_live)"</item>
        <item>"rtmp(able)"</item>
        <item>"自定义"</item>
    </string-array>
</resources>
