<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true" >
        <CheckBox
            android:id="@+id/cb_enable_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_enable_audio"/>
        <CheckBox
            android:id="@+id/cb_fdk_aac_encode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_fdk_aac_encode"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/action_encoder_framerate"/>
        <EditText
            android:id="@+id/et_framerate"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_texture_encode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_texture_encode"/>
        <CheckBox
            android:id="@+id/cb_x264_encode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_x264_encode"/>
        <CheckBox
            android:id="@+id/cb_x264_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_x264_rotate"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/action_output_type"/>
        <Spinner
            android:id="@+id/spinner_output_type"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/output_type_array"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_encode_bps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"/>
	<SeekBar
		android:id="@+id/seekbar_encode_bps"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>



</LinearLayout>